--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -202,9 +202,9 @@
     <!--大风大浪预警end-->
 <!--浪-->
 <div class="ace-settings-container"  style="z-index: 100;top:400px;position: fixed;">
-    <div class="btn btn-app btn-xs btn-primary ace-settings-btn" style="right:0px;position: relative;top:190px;" id="wave-btn">
+   <!-- <div class="btn btn-app btn-xs btn-primary ace-settings-btn" style="right:0px;position: relative;top:190px;" id="wave-btn">
     <i class="icon-list-ul bigger-150"></i>
-    </div>
+    </div>-->
     <div id="waveScale" class="widget-box ace-settings-box "style="display:none;width: 75px;background: #73A5D6;border-radius: 5px;border:1px solid #3C4C5C;">
         <label style="color: #ffffff;">浪</label>
         <i class="icon-double-angle-right" style="margin-left: 5px;color: #ffffff" id="rightAngle"></i>
@@ -482,7 +482,7 @@
 <!--视图模式end-->
 <!--海面风数据展示窗口-->
 <div id="winds" class="widget-box" style="float:left;position:absolute;left: 225px; top:305px;visibility: hidden;">
-    <div id="windObserved" style="width: 700px;height: 300px;" >
+    <div id="windObserved" style="width: 700px;height: 316px;" >
         <div class="demo-section k-content wide">
             <!--图表-->
             <div id="chart1" style="height: 300px"></div>
@@ -491,7 +491,7 @@
 </div>
 <!--海浪数据展示窗口-->
 <div id="ship" class="widget-box" style="float:left;position:absolute;left: 225px; top:305px;visibility: hidden;">
-    <div id="shipObserved" style="width: 700px;height: 300px;" >
+    <div id="shipObserved" style="width: 700px;height: 316px;" >
         <div class="demo-section k-content wide">
             <!--图表-->
             <div id="chart2" style="height: 300px"></div>
@@ -500,7 +500,7 @@
 </div>
 <!--海流数据展示窗口-->
 <div class="widget-box" id="sflow" style="visibility: hidden;float:left;position:absolute;left: 225px; top:305px;">
-    <div id="wflow" style="width: 700px;height: 300px;" >
+    <div id="wflow" style="width: 700px;height: 316px;" >
         <div class="demo-section k-content wide">
             <div class="chart" id="chart3" style="height: 300px"></div>
         </div>
@@ -508,24 +508,30 @@
 </div>
 <!--能见度数据展示窗口-->
 <div class="widget-box" id="visibile" style="visibility: hidden;float:left;position:absolute;left: 225px; top:305px;">
-    <div id="Evisibled" style="width: 700px;height: 300px;" >
+    <div id="Evisibled" style="width: 700px;height: 316px;" >
         <div class="demo-section k-content wide">
             <div class="chart" id="chart4" style="height: 300px"></div>
         </div>
     </div>
 </div>
 
+<!--船舶类型选择-->
+<div  class="widget-box" style="top: 309px;position: absolute;left: 22px">
+    <div id="boatType" class="demo-section k-content">
+        <div id="treeview"></div>
+    </div>
+</div>
 <!--船载观测数据类型窗口-->
-<div id="dataType" class="widget-box" style="display:none;float:left;position:fixed;left: 22px; top:316px!important;">
-    <div id="observedType">
+<div id="dataType" class="widget-box" style="visibility:hidden;position:absolute;left: 22px; top:518px;">
+    <div id="observedType" >
         <div style="margin-top: 15px;">
-            <label style="font-size: 10pt;font-family: Times New Roman,Georgia,Serif;"><input name="type" type="radio" value="wind" checked onchange="chkShipObserveType(this);"/>&nbsp;&nbsp;<img src="/img/ships/wind.jpg">&nbsp;&nbsp;风场 </label>&nbsp;&nbsp;
+            <label style="font-size: 10pt;font-family: Times New Roman,Georgia;"><input name="type" type="radio" value="wind" checked onchange="chkShipObserveType(this);"/>&nbsp;&nbsp;<img src="/img/ships/wind.jpg">&nbsp;&nbsp;风场 </label>&nbsp;&nbsp;
             <label style="font-size: 10pt;font-family: Times New Roman,Georgia,Serif;"><input name="type" type="radio" value="pa" onchange="chkShipObserveType(this);"/>&nbsp;&nbsp;<img src="/img/ships/pa.png">&nbsp;&nbsp;气压 </label>
         </div>
     </div>
 </div>
 <!--船载观测数据展示窗口-->
-<div id="shipobserve" style="display: none; position:fixed;left: 200px!important; top:316px!important;">
+<div id="shipobserve" style=" visibility:hidden;position:absolute;left: 290px!important; top:316px!important;">
     <div id="shipOb" style="width: 900px;height: 300px;">
         <!--图表-->
         <div id="chart" style="float: left;width: 450px;height: 280px;"></div>
