船载数据bug修复
船载数据bug修复

--- a/src/main/resources/templates/new.html
+++ b/src/main/resources/templates/new.html
@@ -516,9 +516,9 @@
 </div>
 
 <!--船舶类型选择-->
-<div  class="widget-box" style="top: 309px;position: absolute;left: 22px">
+<div  class="widget-box" style="top: 311px;position: absolute;left: 22px">
     <div id="boatType" class="demo-section k-content">
-        <div id="treeview"></div>
+        <div id="treeview" style="display: none"></div>
     </div>
 </div>
 <!--船载观测数据类型窗口-->
@@ -714,13 +714,11 @@
 <script type="text/javascript" src="/js/terraformer.min.js"></script>
 <script type="text/javascript" src="/js/terraformer-arcgis-parser.min.js"></script>
 <script type="text/javascript" src="http://localhost:8080/arcgis_js_api/library/3.14/3.14/init.js"></script>
-<script src="/js/main.js"></script>
-
-<script src="/js/dropdownHeader.js"></script>
 <script src="/js/wind.js"></script>
+<script src="/js/main.js"></script>
+<script src="/js/dropdownHeader.js"></script>
 <!--船载数据js-->
 <script src="/js/shipObserved.js"></script>
-
 <script>
     //iframe 切换
     $(".wave").click(function(){
